# colour-demosaicing

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  BIBLIOGRAPHY.bib  BIBLIOGRAPHY.rst  CONTRIBUTORS.rst  COPYING  LICENSE  MANIFEST.in  README.rst  TODO.rst  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation-improvement.yml  feature-request.yml  question.yml
.github/workflows/: continuous-integration-documentation.yml  continuous-integration-package.yml  continuous-integration-quality-unit-tests.yml  continuous-integration-static-type-checking.yml  continuous-integration.yml
colour_demosaicing/: __init__.py
colour_demosaicing/bayer/: __init__.py  masks.py  mosaicing.py
colour_demosaicing/bayer/demosaicing/: __init__.py  bilinear.py  malvar2004.py  menon2007.py
colour_demosaicing/bayer/demosaicing/tests/: test_bilinear.py  test_malvar2004.py  test_menon2007.py
colour_demosaicing/bayer/tests/: test_masks.py  test_mosaicing.py  tests_masks.py  tests_mosaicing.py
colour_demosaicing/bayer/tests/resources/: BGGR_Masks.exr  GBRG_Masks.exr  GRBG_Masks.exr  Lighthouse.exr  Lighthouse_Bilinear_BGGR.exr  Lighthouse_Bilinear_GBRG.exr  Lighthouse_Bilinear_GRBG.exr  Lighthouse_Bilinear_RGGB.exr  Lighthouse_CFA_BGGR.exr  Lighthouse_CFA_GBRG.exr  Lighthouse_CFA_GRBG.exr  Lighthouse_CFA_RGGB.exr  Lighthouse_Malvar2004_BGGR.exr  Lighthouse_Malvar2004_GBRG.exr  Lighthouse_Malvar2004_GRBG.exr  Lighthouse_Malvar2004_RGGB.exr  Lighthouse_Menon2007_BGGR.exr  Lighthouse_Menon2007_GBRG.exr  Lighthouse_Menon2007_GRBG.exr  Lighthouse_Menon2007_NR_BGGR.exr  Lighthouse_Menon2007_NR_GBRG.exr  Lighthouse_Menon2007_NR_GRBG.exr  Lighthouse_Menon2007_NR_RGGB.exr  Lighthouse_Menon2007_RGGB.exr  RGGB_Masks.exr
colour_demosaicing/bayer/tests/tests_demosaicing/: tests_bilinear.py  tests_malvar2004.py  tests_menon2007.py
colour_demosaicing/examples/: examples_bayer.ipynb
docs/: Makefile  api.rst  bibliography.rst  colour_demosaicing.bayer.demosaicing.bilinear.rst  colour_demosaicing.bayer.demosaicing.malvar2004.rst  colour_demosaicing.bayer.demosaicing.menon2007.rst  colour_demosaicing.bayer.demosaicing.rst  colour_demosaicing.bayer.masks.rst  colour_demosaicing.bayer.mosaicing.rst  colour_demosaicing.bayer.rst  colour_demosaicing.rst  conf.py  index.rst  installation.rst  make.bat  manual.rst  modules.rst  reference.rst  requirements.txt  user-guide.rst
docs/_static/: custom.css
docs/_templates/: navbar.html
utilities/: build_sphinx_documentation.sh  export_todo.py  unicode_to_ascii.py
